[gd_scene load_steps=4 format=3 uid="uid://dperf_test_scene"]

[ext_resource type="Script" path="res://scenes/test/performance_test_controller.gd" id="1_controller"]
[ext_resource type="Script" path="res://scripts/systems/unit_spawner.gd" id="2_spawner"]
[ext_resource type="Script" path="res://scripts/test/benchmark.gd" id="3_benchmark"]

[node name="PerformanceTest" type="Node2D"]
script = ExtResource("1_controller")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(1.2, 1.2)

[node name="Background" type="ColorRect" parent="."]
offset_left = -500.0
offset_top = -300.0
offset_right = 1780.0
offset_bottom = 1020.0
color = Color(0.1, 0.12, 0.1, 1)

[node name="BattleArea" type="ColorRect" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 1230.0
offset_bottom = 670.0
color = Color(0.15, 0.18, 0.15, 1)

[node name="UnitSpawner" type="Node2D" parent="."]
script = ExtResource("2_spawner")
spawn_area_size = Vector2(400, 250)

[node name="Benchmark" type="Node" parent="."]
script = ExtResource("3_benchmark")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FPSPanel" type="Panel" parent="UI/HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 90.0

[node name="FPSLabel" type="Label" parent="UI/HUD/FPSPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 24
text = "FPS: 60"

[node name="MemoryLabel" type="Label" parent="UI/HUD/FPSPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 45.0
offset_right = 180.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 18
text = "Memory: 0.0 MB"

[node name="StatusPanel" type="Panel" parent="UI/HUD"]
offset_left = 10.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0

[node name="StatusLabel" type="Label" parent="UI/HUD/StatusPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 90.0
text = "Status:
Manual Mode
Units: 0/100"

[node name="InfoPanel" type="Panel" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="InfoLabel" type="Label" parent="UI/HUD/InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 180.0
text = "Performance Test

Controls:
SPACE: Auto Benchmark
1-9: Spawn 10-90 units
0: Spawn 100 units
R: Reset
Q: Quit"

[node name="Title" type="Label" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "First Queen 4 - Performance Test"
horizontal_alignment = 1
